# general

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  nonce_boards.txt  private_key_boards.txt  public_key_boards.txt  publisher.cpp  requirements.txt  symmetric_key_boards.txt  wasi.cpp
include/: application.h  arg_parser.h  base_subscriber.h  constants.h  mongo_app.h  mongodb_handler.h  nautilus.h  nmea_reader.h  packet_deserializer.h  proto_json_converter.h  relay.h  security.h  udp_pub.h  udp_sub.h
lib/: application.cpp  arg_parser.cpp  base_subscriber.cpp  constants.cpp  mongodb_handler.cpp  relay.cpp  security.cpp  udp_pub.cpp  udp_sub.cpp
lib/udp_lib/: CMakeLists.txt
our_protobuf/: packet.pb.cc  packet.pb.h  packet.proto
protobuf/: packet.proto
python/: application.py
python/src/: mongo_handler.py  udp_pub.py
scripts/: README.md  create-bare-repos.sh  submodule-switcher.sh
src/: app_main.cpp  application.cpp  broadcast_receiver.cpp  broadcast_sender.cpp  mongo_app.cpp  nautilus.cpp  nmea_reader.cpp  packet_deserializer.cpp  proto_json_converter.cpp  relay.cpp  relay_main.cpp  test_roles.cpp
test/: README.md  can_writer.py
